<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rauch.malena.budgetoverview.Depts.AddDeptActivity">


    <ImageButton
        android:id="@+id/addDept_imageButton_delete"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <ImageButton
        android:id="@+id/addDept_imageButton_save"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/addDept_editText_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDept_textView_titel"
        app:layout_constraintVertical_bias="0.27">

        <RadioButton
            android:id="@+id/addDept_radioButton_give"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/give"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addDept_radioButton_get" />

        <RadioButton
            android:id="@+id/addDept_radioButton_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:text="@string/get"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addDept_textView_titel" />
    </RadioGroup>

    <TextView
        android:id="@+id/addDept_textView_titel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="36dp"
        android:text="@string/addDept_titel"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addDept_textView_amount"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="48dp"
        android:text="@string/amount"
        app:layout_constraintBottom_toTopOf="@+id/addDept_editText_amount"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/addDept_editText_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDept_textView_titel" />

    <TextView
        android:id="@+id/addDept_textView_euro"
        android:layout_width="27dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="252dp"
        android:text="@string/euro"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/addDept_editText_amount"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addDept_textView_Friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/friend"
        app:layout_constraintBottom_toTopOf="@+id/addDept_friend_spinner"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/addDept_editText_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:layout_marginStart="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/addDept_button_addFriend"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="148dp"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:background="@color/buttons"
        android:backgroundTint="@color/buttons"
        android:text="@string/add_friend"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDept_friend_spinner"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/addDept_friend_spinner"
        android:layout_width="266dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDept_editText_amount" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/reason"
        app:layout_constraintBottom_toTopOf="@+id/addDept_editText_reason"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
