<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rauch.malena.budgetoverview.Transaction.AddTransactActivity">



    <ImageButton
        android:id="@+id/addTransaction_imageButton_delete"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <ImageButton
        android:id="@+id/addTransaction_imageButton_save"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/addTransaction_editText_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTransaction_textView_titel">

        <RadioButton
            android:id="@+id/addTransaction_radioButton_give"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/get"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addTransaction_radioButton_get" />

        <RadioButton
            android:id="@+id/addTransaction_radioButton_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="28dp"
            android:layout_weight="1"
            android:text="@string/spent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addTransaction_textView_titel" />
    </RadioGroup>

    <TextView
        android:id="@+id/addTransaction_textView_titel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="96dp"
        android:text="@string/addTransactions"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addTransaction_textView_amount"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="52dp"
        android:text="@string/amount"
        app:layout_constraintBottom_toTopOf="@+id/addTransaction_editText_amount"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/addTransaction_editText_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTransaction_textView_titel" />

    <TextView
        android:id="@+id/addTransaction_textView_euro"
        android:layout_width="27dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="280dp"
        android:text="@string/euro"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/addTransaction_editText_amount"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addTransaction_textView_Friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTransaction_editText_amount" />

    <EditText
        android:id="@+id/addTransaction_editText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTransaction_textView_Friend"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>
